build: scripts dev 실행 시 api, cwe, micro-proxy 동시 실행, api hot load

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "whatap-experts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "concurrently \"npm run api run dev\" \"npm run cwe run dev\" \"micro-proxy -r rules-dev.json\"",
+    "cwe": "npm -w=@whatap-experts/cwe",
+    "api": "npm -w=@whatap-experts/api",
+    "ui": "npm -w=@whatap-experts/ui"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,11 @@
   },
   "homepage": "https://github.com/whatap-experts/whatap-experts#readme",
   "workspaces": [
-    "packages/controller",
-    "packages/ui",
-    "packages/template"
-  ]
+    "./packages/*"
+  ],
+  "devDependencies": {
+    "concurrently": "^7.2.1",
+    "micro-proxy": "^1.1.0"
+  },
+  "dependencies": {}
 }
