--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm run dev --workspace=create-whatap-experts\" \"npm run dev --workspace=@whatap-experts/community\""
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,9 @@
   },
   "homepage": "https://github.com/whatap-experts/whatap-experts#readme",
   "workspaces": [
-    "packages/controller",
-    "packages/ui",
-    "packages/template"
-  ]
+    "packages/*"
+  ],
+  "dependencies": {
+    "concurrently": "^7.2.1"
+  }
 }
