--- a/packages/community/package.json
+++ b/packages/community/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@whatap-experts/template",
+  "name": "@whatap-experts/community",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,11 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@types/node": "17.0.38",
+    "@types/react": "18.0.10",
+    "@types/react-dom": "18.0.5",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.7.2"
   }
 }
