feat(api): recordMap 파싱 및 getPage 함수 작성 (작동안함)

--- a/packages/whatap-experts-api/tsconfig.json
+++ b/packages/whatap-experts-api/tsconfig.json
@@ -4,6 +4,7 @@
         "lib": [
             "es7"
         ],
+        "moduleResolution": "node",
         "outDir": "dist",
         "rootDir": "src",
         "removeComments": true,
