--- a/packages/whatap-experts-api/package.json
+++ b/packages/whatap-experts-api/package.json
@@ -25,6 +25,8 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "notion-client": "^6.12.9",
+    "notion-types": "^6.12.6",
     "path": "^0.12.7"
   },
   "devDependencies": {
