--- a/packages/create-whatap-experts/package.json
+++ b/packages/create-whatap-experts/package.json
@@ -14,7 +14,8 @@
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-notion-x": "^6.12.11"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
